-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 15
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256733 | 13.0.6 | Ekaterina Vergizova | P3 | Resolved | Fixed | b01 |
| JDK-8345238 | 11.0.27-oracle | Yagmur Eren | P3 | Resolved | Fixed | b01 |
| JDK-8253998 | 11.0.10 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
(synopsis is provisional, feel free to change once the root cause is found)
It fails in JFR test, but I suspect it is a compiler/GC problem that exposes broken oop in compiled method from JFR namespace.
$ CONF=linux-x86_64-server-fastdebug make run-test TEST=jdk/jfr/jcmd/TestJcmdStartStopDefault.java TEST_VM_OPTS="-XX:+VerifyOops"
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86.cpp:883), pid=16833, tid=16938
# fatal error: DEBUG MESSAGE: verify_oop: rsi: broken oop
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1089741] MacroAssembler::debug64(char*, long, long*)+0x41
#
--------------- T H R E A D ---------------
Current thread (0x00007f964c001000): JavaThread "Attach Listener" daemon [_thread_in_Java, id=16938, stack(0x00007f9669cb0000,0x00007f9669db1000)]
Stack: [0x00007f9669cb0000,0x00007f9669db1000], sp=0x00007f9669daea30, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1089741] MacroAssembler::debug64(char*, long, long*)+0x41
v ~StubRoutines::verify_oop
J 1593 c1 jdk.jfr.events.ActiveSettingEvent.commit()V jdk.jfr@15-internal (85 bytes) @ 0x00007f967ce9387c [0x00007f967ce92d40+0x0000000000000b3c]
It fails in JFR test, but I suspect it is a compiler/GC problem that exposes broken oop in compiled method from JFR namespace.
$ CONF=linux-x86_64-server-fastdebug make run-test TEST=jdk/jfr/jcmd/TestJcmdStartStopDefault.java TEST_VM_OPTS="-XX:+VerifyOops"
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/cpu/x86/macroAssembler_x86.cpp:883), pid=16833, tid=16938
# fatal error: DEBUG MESSAGE: verify_oop: rsi: broken oop
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1089741] MacroAssembler::debug64(char*, long, long*)+0x41
#
--------------- T H R E A D ---------------
Current thread (0x00007f964c001000): JavaThread "Attach Listener" daemon [_thread_in_Java, id=16938, stack(0x00007f9669cb0000,0x00007f9669db1000)]
Stack: [0x00007f9669cb0000,0x00007f9669db1000], sp=0x00007f9669daea30, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1089741] MacroAssembler::debug64(char*, long, long*)+0x41
v ~StubRoutines::verify_oop
J 1593 c1 jdk.jfr.events.ActiveSettingEvent.commit()V jdk.jfr@15-internal (85 bytes) @ 0x00007f967ce9387c [0x00007f967ce92d40+0x0000000000000b3c]
- backported by
-
JDK-8253998 jdk/jfr/jcmd/TestJcmdStartStopDefault.java fails -XX:+VerifyOops with "verify_oop: rsi: broken oop"
-
- Resolved
-
-
JDK-8256733 jdk/jfr/jcmd/TestJcmdStartStopDefault.java fails -XX:+VerifyOops with "verify_oop: rsi: broken oop"
-
- Resolved
-
-
JDK-8345238 jdk/jfr/jcmd/TestJcmdStartStopDefault.java fails -XX:+VerifyOops with "verify_oop: rsi: broken oop"
-
- Resolved
-
- relates to
-
JDK-8166806 Add intrinsic support for writer used in event based tracing
-
- Resolved
-
(1 links to)