8239477: jdk/jfr/jcmd/TestJcmdStartStopDefault.java fails -XX:+VerifyOops with "verify_oop: rsi: broken oop"

Use T_ADDRESS instead of T_OBJECT to load metadata.

Reviewed-by: kvn